cabal-version:       2.2
                     -- ^
                     -- « cabal2nix » doesn't yet support Cabal-2.4
                     --
                     -- Cabal-2.2 introduced Common Stanzas.

build-type:          Simple

--------------------------------------------------

name:                skeletor
version:             0.0.0
                     -- ^ ❲ A.B.C.D ❳:
                     --
                     -- • ❲ A.B ❳ is the MajorVersion,
                     -- • ❲ C ❳ is the MinorVersion,
                     -- • ❲ D ❳ is a PatchVersion.

-- x-revision:          1

--------------------------------------------------
-- Metadata --------------------------------------
--------------------------------------------------

synopsis: Haskell project scaffolding

description: Create a haskell project from a template.

category: Data

--------------------------------------------------

license:             GPL-3.0-or-later
license-file:        LICENSE.txt
copyright:           2019 Spiros Boosalis

author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com

--------------------------------------------------
-- Portability -----------------------------------
--------------------------------------------------

stability: experimental

--------------------------------------------------

tested-with: GHC == 8.6.3

--------------------------------------------------
-- (Non-Code) Files ------------------------------
--------------------------------------------------

extra-source-files: README.md
                    LICENSE.txt

--------------------------------------------------

-- data-dirs: data, projects

data-files: data/.gitignore

            -- Licenses:
            -- licenses/**/*.txt

            data/licenses/AGPL-3.0-or-later/*.txt
            data/licenses/Apache-2.0/*.txt
            data/licenses/BSD-3-Clause/*.txt
            data/licenses/GPL-3.0-or-later/*.txt
            data/licenses/LGPL-3.0-or-later/*.txt
            data/licenses/MIT/*.txt

            -- Projects:

            -- projects/*.md

            -- projects/default/.gitattributes
            -- projects/default/.gitignore
            -- projects/default/.projectile
            -- projects/default/.travis.yml
            -- projects/default/LICENSE.txt
            -- projects/default/Makefile
            -- projects/default/README.md
            -- projects/default/cabal
            -- projects/default/cabal-ghcjs.project
            -- projects/default/cabal-sboo.project
            -- projects/default/cabal.project
            -- projects/default/cabal/7-10-3.project
            -- projects/default/cabal/dependencies-local.project
            -- projects/default/cabal/dependencies-nixpkgs.project
            -- projects/default/cabal/hackage-head.project
            -- projects/default/cabal/hackage-stackage.project
            -- projects/default/cabal/libraries-shared.project
            -- projects/default/cabal/libraries-static.project
            -- projects/default/cabal/lts-12.project
            -- projects/default/cabal/maximal.project
            -- projects/default/cabal/nix.project
            -- projects/default/cabal/profiled.project
            -- projects/default/documents
            -- projects/default/documents/CONTRIBUTING.md
            -- projects/default/documents/IMPLEMENTATION.md
            -- projects/default/documents/LICENSE-GPL3-StandardLicenseHeader.txt
            -- projects/default/documents/LICENSE-GPL3-TerminalLicenseNotice.txt
            -- projects/default/documents/LICENSE-GPL3.txt
            -- projects/default/documents/NOTES.md
            -- projects/default/images
            -- projects/default/images/haskell_128x128.png
            -- projects/default/nix
            -- projects/default/nix/README.md
            -- projects/default/nix/config
            -- projects/default/nix/config/default.nix
            -- projects/default/nix/environment.nix
            -- projects/default/nix/nixpkgs
            -- projects/default/nix/nixpkgs/default.nix
            -- projects/default/nix/nixpkgs/nixpkgs.json
            -- projects/default/nix/nixpkgs/update-nixpkgs.sh
            -- projects/default/nix/overlays
            -- projects/default/nix/overlays/default.nix
            -- projects/default/nix/overlays/ghcs.nix
            -- projects/default/nix/overlays/overlay.nix
            -- projects/default/nix/packages.nix
            -- projects/default/nix/project.nix
            -- projects/default/nix/shell.nix
            -- projects/default/scripts
            -- projects/default/scripts/README.md
            -- projects/default/scripts/sboo
            -- projects/default/scripts/sboo/ghcid.sh
            -- projects/default/stack-nightly.yaml
            -- projects/default/stack.yaml
            -- projects/default/xxx-package-xxx
            -- projects/default/xxx-package-xxx/CHANGELOG.md
            -- projects/default/xxx-package-xxx/LICENSE.txt
            -- projects/default/xxx-package-xxx/README.md
            -- projects/default/xxx-package-xxx/benchmarks
            -- projects/default/xxx-package-xxx/benchmarks/space
            -- projects/default/xxx-package-xxx/benchmarks/space/.dir-locals.el
            -- projects/default/xxx-package-xxx/benchmarks/space/Bench
            -- projects/default/xxx-package-xxx/benchmarks/space/Bench/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/benchmarks/space/Main.hs
            -- projects/default/xxx-package-xxx/benchmarks/time
            -- projects/default/xxx-package-xxx/benchmarks/time/.dir-locals.el
            -- projects/default/xxx-package-xxx/benchmarks/time/Bench
            -- projects/default/xxx-package-xxx/benchmarks/time/Bench/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/benchmarks/time/Main.hs
            -- projects/default/xxx-package-xxx/data
            -- projects/default/xxx-package-xxx/data/golden
            -- projects/default/xxx-package-xxx/data/golden/example.txt
            -- projects/default/xxx-package-xxx/data/golden/example.txt.example
            -- projects/default/xxx-package-xxx/data/golden/example.txt.golden
            -- projects/default/xxx-package-xxx/etc
            -- projects/default/xxx-package-xxx/etc/bash_completion.d
            -- projects/default/xxx-package-xxx/executables
            -- projects/default/xxx-package-xxx/executables/example
            -- projects/default/xxx-package-xxx/executables/example/.dir-locals.el
            -- projects/default/xxx-package-xxx/executables/example/Example
            -- projects/default/xxx-package-xxx/executables/example/Example/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/executables/example/Main.hs
            -- projects/default/xxx-package-xxx/executables/program
            -- projects/default/xxx-package-xxx/executables/program/.dir-locals.el
            -- projects/default/xxx-package-xxx/executables/program/Executable
            -- projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX
            -- projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX/Core.hs
            -- projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX/Main.hs
            -- projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX/Options.hs
            -- projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX/Types.hs
            -- projects/default/xxx-package-xxx/executables/program/Main.hs
            -- projects/default/xxx-package-xxx/executables/program/Program.Skeletor.Haskell.Prelude.hs
            -- projects/default/xxx-package-xxx/include
            -- projects/default/xxx-package-xxx/include/HsSbooMacros.h
            -- projects/default/xxx-package-xxx/internals
            -- projects/default/xxx-package-xxx/internals/.dir-locals.el
            -- projects/default/xxx-package-xxx/internals/Internal
            -- projects/default/xxx-package-xxx/internals/Internal/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/internals/Paths_xxx_package_xxx.hs
            -- projects/default/xxx-package-xxx/internals/Prelude_xxx_package_xxx.hs
            -- projects/default/xxx-package-xxx/library
            -- projects/default/xxx-package-xxx/library/.dir-locals.el
            -- projects/default/xxx-package-xxx/library/Xxx_Module_xxX
            -- projects/default/xxx-package-xxx/library/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/library/Xxx_Module_xxX/Core.hs
            -- projects/default/xxx-package-xxx/library/Xxx_Module_xxX/Derived.hs
            -- projects/default/xxx-package-xxx/library/Xxx_Module_xxX/Types.hs
            -- projects/default/xxx-package-xxx/share
            -- projects/default/xxx-package-xxx/share/man
            -- projects/default/xxx-package-xxx/tests
            -- projects/default/xxx-package-xxx/tests/doc
            -- projects/default/xxx-package-xxx/tests/doc/.dir-locals.el
            -- projects/default/xxx-package-xxx/tests/doc/DocTests.hs
            -- projects/default/xxx-package-xxx/tests/golden
            -- projects/default/xxx-package-xxx/tests/golden/.dir-locals.el
            -- projects/default/xxx-package-xxx/tests/golden/GoldenTests.hs
            -- projects/default/xxx-package-xxx/tests/golden/Test
            -- projects/default/xxx-package-xxx/tests/golden/Test/Golden
            -- projects/default/xxx-package-xxx/tests/golden/Test/Golden/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/tests/golden/data
            -- projects/default/xxx-package-xxx/tests/golden/data/example.golden
            -- projects/default/xxx-package-xxx/tests/property
            -- projects/default/xxx-package-xxx/tests/property/.dir-locals.el
            -- projects/default/xxx-package-xxx/tests/property/PropertyTests.hs
            -- projects/default/xxx-package-xxx/tests/property/Test
            -- projects/default/xxx-package-xxx/tests/property/Test/Property
            -- projects/default/xxx-package-xxx/tests/property/Test/Property/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/tests/unit
            -- projects/default/xxx-package-xxx/tests/unit/.dir-locals.el
            -- projects/default/xxx-package-xxx/tests/unit/Test
            -- projects/default/xxx-package-xxx/tests/unit/Test/Unit
            -- projects/default/xxx-package-xxx/tests/unit/Test/Unit/Xxx_Module_xxX.hs
            -- projects/default/xxx-package-xxx/tests/unit/UnitTests.hs
            -- projects/default/xxx-package-xxx/xxx-package-xxx.cabal

--------------------------------------------------

--TODO add images
-- extra-doc-files: docs/

--------------------------------------------------
-- REPOSITORY
--------------------------------------------------

homepage:            http://github.com/sboosali/skeletor#readme
bug-reports:         http://github.com/sboosali/skeletor/issues

source-repository head
  type:     git
  location: git://github.com/sboosali/skeletor.git
  subdir:   skeletor

-- source-repository this
--   type:     git
--   location: https://github.com/sboosali/skeletor/tree/v0.1.0
--   subdir:   skeletor

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

flag develop

  default:     False

  description: Exposed internals and/or dynamic typechecking (for development).

  manual:      True

--------------------------------------------------

flag static

  default:     False

  description: Build a statically-linked executable (NOTE you must also, via « ../nix/static.nix », provision an environment with « musl » and other statically-linkable C Libraries.)

  manual:      True

--------------------------------------------------
-- Common Stanzas --------------------------------
--------------------------------------------------

common sboo-haskell

 ------------------------------

 default-language: Haskell2010
 
 ------------------------------
 
 build-depends:
               base >=4.10 && <5

 -----------------------------

 include-dirs:     include
 includes:         HsSbooMacros.h
 install-includes: HsSbooMacros.h

 ------------------------------

 ghc-options:

  --------------------
  -- warning groups
  --------------------

             -Wall

  --------------------
  -- disabled warnings
  --------------------

             -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable:

             -Wmissing-methods
             -fwarn-name-shadowing
             -fwarn-tabs
              
  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields

 if flag(develop)
    ghc-options:

        --------------------
        -- typed-holes
        --------------------

         -- use `typed-holes`, not `undefined`, during development

             -fdefer-typed-holes
             -Wtyped-holes

 ------------------------------
 
 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------

                -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------

                -Wnoncanonical-monad-instances
                -Wnoncanonical-monadfail-instances

                -Wincomplete-record-updates
                -Wincomplete-uni-patterns

                -Widentities

                -- -Wmissing-exported-signatures
                -- -Whi-shadowing

 ------------------------------
  
 if impl(ghc >= 8.2)
    ghc-options:

        --------------------
        -- enabled warnings
        --------------------

                -Wcpp-undef

                -Wmissing-home-modules

                -Wunbanged-strict-patterns

 ------------------------------

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
                    NoImplicitPrelude

   --------------------
   -- `deriving`
   --------------------
                    AutoDeriveTypeable
                    DeriveDataTypeable
                    DeriveGeneric
                    DeriveFunctor
                    DeriveFoldable
                    DeriveTraversable
                    DeriveLift
                    StandaloneDeriving

                    DerivingStrategies
                    DeriveAnyClass
                    GeneralizedNewtypeDeriving

   --------------------
   -- syntax
   --------------------
                    PackageImports
                    LambdaCase
                    EmptyCase
                    TypeOperators
                    PostfixOperators
                    BangPatterns
                    KindSignatures
                    NamedFieldPuns
                    RecordWildCards
                    TupleSections
                    MultiWayIf
                    DoAndIfThenElse
                    EmptyDataDecls
                    InstanceSigs
                       
   --------------------
   -- typeclasses
   --------------------
                    MultiParamTypeClasses
                    FlexibleContexts
                    FlexibleInstances
                    TypeFamilies
                    FunctionalDependencies

   --------------------
   -- patterns
   --------------------
                    ViewPatterns
                    PatternSynonyms

   --------------------
   -- (miscellaneous)
   --------------------
                    ScopedTypeVariables

 ------------------------------

 other-extensions:

   --------------------
   -- macros
   --------------------
                  TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
                  OverloadedStrings
                  OverloadedLists

   --------------------
   -- (miscellaneous)
   --------------------

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

--------------------------------------------------

common sboo-main

 ------------------------------

 ghc-options:
 
   --------------------
   -- Compilation -----
   --------------------
 
 --            -O2

   --------------------
   -- Runtime ---------
   --------------------
 
             -threaded
             -rtsopts -with-rtsopts=-N             
 
   --------------------
   -- Warnings --------
   --------------------
 
             -Wno-missing-signatures
             -fno-warn-type-defaults
             
 ------------------------------

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------
library

 import: sboo-haskell

 hs-source-dirs:
                library
                internals
              --signatures
 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 exposed-modules: Skeletor

                  ------------

                  Skeletor.Core
                  -- Skeletor.Core.Types

                  Skeletor.Core.Hash
                  Skeletor.Core.Hash.Types

                  -- Skeletor.Core.File
                  -- Skeletor.Core.File.Types
                  -- Skeletor.Core.File.Read
                  -- Skeletor.Core.File.Encoding

                  -- Skeletor.Core.Directory
                  -- Skeletor.Core.Directory.Types
                  -- Skeletor.Core.Directory.Values
                  
                  -- Skeletor.Core.FileTree
                  -- Skeletor.Core.FileTree.Types

                  -- Skeletor.Core.URI
                  -- Skeletor.Core.URI.Types
                  -- Skeletor.Core.URI.Read

                  -- Skeletor.Core.Path
                  -- Skeletor.Core.Path.Types
                  -- Skeletor.Core.Path.Values

                  -- Skeletor.Core.Fetch

                  -- Skeletor.Core.Location
                  -- Skeletor.Core.Location.Types

                  -- --Skeletor.Core.Git
                  -- Skeletor.Core.Git.Types
                  -- Skeletor.Core.SHA
                  -- Skeletor.Core.SHA.Types

                  -- Skeletor.Core.Program
                  -- Skeletor.Core.Program.Types
                  -- Skeletor.Core.Program.Version
                  -- Skeletor.Core.Program.Invoke
                  -- Skeletor.Core.Program.Git

                  -- Skeletor.Core.EnvironmentVariable
                  -- Skeletor.Core.EnvironmentVariable.Types
                  -- Skeletor.Core.EnvironmentVariable.Errors
                  -- Skeletor.Core.EnvironmentVariable.Name
                  -- Skeletor.Core.EnvironmentVariable.Value
                  -- Skeletor.Core.EnvironmentVariable.Text
                  -- Skeletor.Core.EnvironmentVariable.Path
                  -- Skeletor.Core.EnvironmentVariable.List
                  -- Skeletor.Core.EnvironmentVariable.Number

                  -- Skeletor.Core.Archive
                  -- Skeletor.Core.Compressed
                  -- Skeletor.Core.Tarball

                  ------------

                  Skeletor.Haskell
                  Skeletor.Haskell.Types

                  Skeletor.Haskell.Core
                  Skeletor.Haskell.Derived

                  Skeletor.Haskell.Find
                  Skeletor.Haskell.Find.Types

                  Skeletor.Haskell.Project
                  Skeletor.Haskell.Project.Types

                  Skeletor.Haskell.Chiaroscuro
                  Skeletor.Haskell.Chiaroscuro.Types

                  Skeletor.Haskell.License
                  Skeletor.Haskell.License.Types

                  -- Skeletor.Haskell.IO
                  -- Skeletor.Haskell.Fetch

                  Skeletor.Haskell.Variable
                  Skeletor.Haskell.Variable.Types
                  Skeletor.Haskell.Variable.Values
                  Skeletor.Haskell.Variable.Binding
                  Skeletor.Haskell.Variable.Binding.Types

  --              Skeletor.Haskell.Parsers

                  Skeletor.Haskell.Turtle

                  ------------

                  Internal.Skeletor.Haskell
                  Prelude_skeletor

                  ------------

                  Prelude_location

                  ------------

 -- other-modules:   Paths_skeletor
 -- autogen-modules: Paths_skeletor

 ------------------------------
 ------------------------------

 -- signatures:

 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 build-depends:

   --------------------
   -- my libraries.
   --------------------

               spiros

   --          spiros    ^>= 0.4
   --        , enumerate ^>= 0.3

  --------------------
  -- boot-libraries & standard-library packages,
  --------------------

             , text
             , bytestring
             , containers
             , transformers
             , mtl

  --------------------
  -- extended(/unofficial) "standard-library" packages.
  --------------------

             , deepseq
             , hashable             >= 0.12.5
             , unordered-containers >= 0.2.0

   --------------------
   -- filesystem libraries.
   --------------------

             , filepath
             , directory

             , temporary
             , filemanip

   --------------------
   -- shell libraries.
   --------------------

             , typed-process
             , turtle        >= 1.5

   --------------------
   -- file-format libraries.
   --------------------

             , tar
             , zlib

   --------------------
   -- web libraries.
   --------------------

             , modern-uri

             , http-types
             , http-client
             , http-client-tls

   --------------------
   -- terminal libraries.
   --------------------

   --        , terminal

   --------------------
   -- records libraries.
   --------------------

             , lens
             , generic-lens
             , dhall

   --------------------
   -- parsing libraries.
   --------------------

             , trifecta
   --        , megaparsec
             , attoparsec

   --------------------
   -- cryptography / hashing libraries.
   --------------------

             , cryptohash-sha256
             , base16-bytestring

          -- , raaz >= 0.2.1 && < 0.3
          -- , cryptonite

   --------------------
   -- (miscellaneous libraries).
   --------------------
             , these
             , case-insensitive

--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

test-suite unit

  import: sboo-haskell
  import: sboo-main

  hs-source-dirs: tests/unit

  type:    exitcode-stdio-1.0
  main-is: UnitTests.hs

  other-modules: Test.Unit.Skeletor.Haskell

  -- build-tool-depends:
  --                    hspec-discover:hspec-discover

  build-depends: skeletor
               , HUnit
               , tasty
               , tasty-hunit

--------------------------------------------------

test-suite property

  import: sboo-haskell
  import: sboo-main

  hs-source-dirs: tests/property

  type:    exitcode-stdio-1.0
  main-is: PropertyTests.hs

  other-modules: Test.Property.Skeletor.Haskell

  build-depends: skeletor
               , hedgehog
               , tasty
               , tasty-hedgehog

--------------------------------------------------
-- Executables -----------------------------------
--------------------------------------------------

-- See « Skeletor.Haskell ».

executable skeletor-haskell

 ------------------------------

  import: sboo-haskell
  import: sboo-main

 ------------------------------

  if flag(static)

     ld-options: -static
                 -pthread

     cc-options: -static

 ------------------------------

  main-is:             Main.hs

  hs-source-dirs:      executables/skeletor

 ------------------------------

  other-modules: Program.Skeletor.Haskell.Main
                 Program.Skeletor.Haskell.CLI
                 Program.Skeletor.Haskell.IO

                 Program.Skeletor.Haskell.Types
                 Program.Skeletor.Haskell.Constants

                 Program.Skeletor.Haskell.Utilities
                 Program.Skeletor.Haskell.Prelude

                 Program.Skeletor.Haskell.Parsers

 ------------------------------

  build-depends:
                skeletor
              , spiros
              , optparse-applicative

              , text
              , case-insensitive
              , filepath
              , filemanip
              , modern-uri

              , attoparsec
              , megaparsec

                -- TODO rm attoparsec, export helpers from library

              , generic-lens

--------------------------------------------------
--------------------------------------------------